--- a/simple.html
+++ b/simple.html
@@ -3,7 +3,7 @@
  copyright notice
 -->
 <head>
-	<title>An Example Website</title>
+	<title>An Great Website</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<style>
 		body {
@@ -17,7 +17,7 @@
 	<main class="container">
 	<!-- Content Goes Here -->
 		<p>
-			Just some content
+			some intresting stuff
 		</p>
 	</main>
 	<footer class="container">
